--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
-   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
    <style>
        *{
            margin: 0%;
           
        }
        body{
-           background-image: url("/buddha_figurine_head_133825_2560x1440.jpg");
+           background-image: url("buddha_figurine_head_133825_2560x1440.jpg");
            background-size: 1600px 800px;
            background-repeat: no-repeat;
           
